tests/type/errors/bad_function_declarations1.typedsol
2:1 error: Conflicting declarations